Updated v0.1 so it is an actually functional quiz

--- a/v0.1/index.html
+++ b/v0.1/index.html
@@ -8,7 +8,7 @@
     <h1>Quizzical Pursuit</h1>
     <h2>A quiz experience like no other</h2>
     <p>Dare you enter the unforgiving world of... <strong>Quizzical Pursuit</strong>???</p>
-    <p>Click <a href="quiz.html">here</a>... <em>if you dare!!</em></p>
+    <p>Click <a href="q1.html">here</a>... <em>if you dare!!</em></p>
     <img src="thinking.gif" width="100" alt="Thinking emoji" />
 </body>
 </html>
