Updated v0.2 to be the same as the previous commit

--- a/v0.2/q1.html
+++ b/v0.2/q1.html
@@ -15,9 +15,20 @@
         </ul>
     </nav>
     <h1>Quizzical Pursuit</h1>
-    <h2>A quiz experience like no other</h2>
-    <p>Dare you enter the unforgiving world of... <strong>Quizzical Pursuit</strong>???</p>
-    <p>Click <a href="q1.html">here</a>... <em>if you dare!!</em></p>
-    <img src="thinking.gif" width="100" alt="Thinking emoji" />
+    <form class="form">
+        <label>
+            What's your name?<br />
+            <input type="text" name="name" />
+        </label><br />
+        <input type="submit" value="Submit" />
+    </form>
+    <h2>Question 1</h2>
+    <p>
+        The creator of the Enigma Cypher and Machine was of what nationality?<br />
+        <a href="q1wrong.html">American</a><br/>
+        <a href="q1right.html">German</a><br />
+        <a href="q1wrong.html">Polish</a><br />
+        <a href="q1wrong.html">British</a>
+    </p>
 </body>
 </html>
