--- a/v0.2/q2.html
+++ b/v0.2/q2.html
@@ -15,9 +15,20 @@
         </ul>
     </nav>
     <h1>Quizzical Pursuit</h1>
-    <h2>A quiz experience like no other</h2>
-    <p>Dare you enter the unforgiving world of... <strong>Quizzical Pursuit</strong>???</p>
-    <p>Click <a href="q1.html">here</a>... <em>if you dare!!</em></p>
-    <img src="thinking.gif" width="100" alt="Thinking emoji" />
+    <form class="form">
+        <label>
+            What's your name?<br />
+            <input type="text" name="name" />
+        </label><br />
+        <input type="submit" value="Submit" />
+    </form>
+    <h2>Question 2</h2>
+    <p>
+        What is the name of the main character in &quot;Life is Strange&quot;?<br />
+        <a href="q2wrong.html">Victoria Chase</a><br />
+        <a href="q2wrong.html">Stella Hill</a><br />
+        <a href="q2wrong.html">Chloe Price</a><br />
+        <a href="q2right.html">Maxine Caulfield</a>
+    </p>
 </body>
 </html>
