--- a/v0.2/q3wrong.html
+++ b/v0.2/q3wrong.html
@@ -15,9 +15,7 @@
         </ul>
     </nav>
     <h1>Quizzical Pursuit</h1>
-    <h2>A quiz experience like no other</h2>
-    <p>Dare you enter the unforgiving world of... <strong>Quizzical Pursuit</strong>???</p>
-    <p>Click <a href="q1.html">here</a>... <em>if you dare!!</em></p>
-    <img src="thinking.gif" width="100" alt="Thinking emoji" />
+    <h2 style="color: red;">Wrong!!</h2>
+    <p>You have finished the quiz!</p>
 </body>
 </html>
