--- a/v0.2/q3.html
+++ b/v0.2/q3.html
@@ -15,9 +15,18 @@
         </ul>
     </nav>
     <h1>Quizzical Pursuit</h1>
-    <h2>A quiz experience like no other</h2>
-    <p>Dare you enter the unforgiving world of... <strong>Quizzical Pursuit</strong>???</p>
-    <p>Click <a href="q1.html">here</a>... <em>if you dare!!</em></p>
-    <img src="thinking.gif" width="100" alt="Thinking emoji" />
+    <form class="form">
+        <label>
+            What's your name?<br />
+            <input type="text" name="name" />
+        </label><br />
+        <input type="submit" value="Submit" />
+    </form>
+    <h2>Question 3</h2>
+    <p>
+        In the movie The Revenant, DiCaprio&#039;s character hunts down the killer of his son.<br />
+        <a href="q3right.html">True</a><br />
+        <a href="q3wrong.html">False</a>
+    </p>
 </body>
 </html>
